loopdowhile.Poucet2.scala.error
Compilation error:
Poucet2:1: error: Missing closing brace `}' assumed here
var step = 0
^Poucet2:14: error: ';' expected but 'while' found.
}while (!crossing()) 
 ^Poucet2:17: error: 'while' expected but '}' found.
}
^